<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_background"
        android:text="@string/new_game"
        android:textColor="@color/black"
        android:onClick="openNewGame" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:backgroundTint="@color/design_default_color_background"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/set_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/design_default_color_background"
        android:textColor="@color/black"
        android:text="@string/set_a_target"
        android:gravity="center"
        android:onClick="openSetTarget"/>



</LinearLayout>