<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/winbackgroun">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/winbackgroun"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/congratulations_you_won"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/click_on_ok_to_play_again"
                android:textStyle="bold">

            </TextView>

            <Button
                android:id="@+id/irushiOKbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:text="@string/ok_"
                android:textColor="@color/black"
                android:fontFamily="serif">

            </Button>

            <TextView
                android:id="@+id/playAgain2"
                android:layout_width="102dp"
                android:layout_height="67dp"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/go_back"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>
